--- a/src/main/resources/com/salo/sistemacreche/extracadastro/filiaçãoResponsavel.fxml
+++ b/src/main/resources/com/salo/sistemacreche/extracadastro/filiaçãoResponsavel.fxml
@@ -45,7 +45,7 @@
     </GridPane>
     
     <HBox alignment="CENTER_RIGHT" spacing="10" style="-fx-padding: 20 0 0 0;">
-        <Button fx:id="btnSalvarResponsavel" style="-fx-background-color: #0f766e; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Salvar" />
-        <Button fx:id="btnCancelarResponsavel" style="-fx-background-color: #b02e50; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Cancelar" />
+        <Button onAction="#btnSalvarResponsavel" style="-fx-background-color: #0f766e; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Salvar" />
+        <Button onAction="#btnCancelarResponsavel" style="-fx-background-color: #b02e50; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Cancelar" />
     </HBox>
 </VBox>
