--- a/src/main/resources/com/salo/sistemacreche/extracadastro/membrofamiliar.fxml
+++ b/src/main/resources/com/salo/sistemacreche/extracadastro/membrofamiliar.fxml
@@ -5,7 +5,7 @@
 
 <VBox spacing="20.0" style="-fx-background-color: white; -fx-padding: 20;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.salo.sistemacreche.controller.extracadastro.MembroFamiliarController">
     <Label style="-fx-text-fill: #0f766e; -fx-font-weight: bold; -fx-font-size: 16;" text="Cadastro de Membro Familiar" />
-    
+
     <GridPane hgap="15" vgap="15">
         <columnConstraints>
             <ColumnConstraints prefWidth="200" />
@@ -14,27 +14,27 @@
         <children>
             <VBox spacing="3" GridPane.columnIndex="0" GridPane.rowIndex="0">
                 <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Nome" />
-                <TextField prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
+                <TextField fx:id="fieldNome" prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
             </VBox>
             <VBox spacing="3" GridPane.columnIndex="1" GridPane.rowIndex="0">
                 <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Idade" />
-                <TextField prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
+                <TextField fx:id="fieldIdade" prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
             </VBox>
             <VBox spacing="3" GridPane.columnIndex="0" GridPane.rowIndex="1">
                 <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Parentesco" />
-                <TextField prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
+                <TextField fx:id="fieldParentesco" prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
             </VBox>
             <VBox spacing="3" GridPane.columnIndex="1" GridPane.rowIndex="1">
                 <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Escolaridade" />
-                <TextField prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
+                <TextField fx:id="fieldEscolaridade" prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
             </VBox>
             <VBox spacing="3" GridPane.columnIndex="0" GridPane.rowIndex="2">
                 <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Emprego" />
-                <TextField prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
+                <TextField fx:id="fieldEmprego" prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
             </VBox>
             <VBox spacing="3" GridPane.columnIndex="1" GridPane.rowIndex="2">
                 <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Renda (R$)" />
-                <TextField prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
+                <TextField fx:id="fieldRenda" prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" promptText="R$ 0,00" />
             </VBox>
         </children>
         <rowConstraints>
@@ -43,9 +43,9 @@
             <RowConstraints />
         </rowConstraints>
     </GridPane>
-    
+
     <HBox alignment="CENTER_RIGHT" spacing="10" style="-fx-padding: 20 0 0 0;">
-        <Button fx:id="btnSalvarMembro" style="-fx-background-color: #0f766e; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Salvar" />
-        <Button fx:id="btnCancelarMembro" style="-fx-background-color: #b02e50; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Cancelar" />
+        <Button onAction="#btnSalvarMembro" style="-fx-background-color: #0f766e; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Salvar" />
+        <Button onAction="#btnCancelarMembro" style="-fx-background-color: #b02e50; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Cancelar" />
     </HBox>
 </VBox>
