--- a/src/main/resources/com/salo/sistemacreche/extracadastro/pessoaautorizada.fxml
+++ b/src/main/resources/com/salo/sistemacreche/extracadastro/pessoaautorizada.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox spacing="20.0" style="-fx-background-color: white; -fx-padding: 20;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml" fx:controller="com.salo.sistemacreche.controller.extracadastro.PessoaAutorizadaController">
+<VBox spacing="20.0" style="-fx-background-color: white; -fx-padding: 20;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.salo.sistemacreche.controller.extracadastro.PessoaAutorizadaController">
     <Label style="-fx-text-fill: #0f766e; -fx-font-weight: bold; -fx-font-size: 16;" text="Cadastro de Pessoa Autorizada" />
-    
+
     <GridPane hgap="15" vgap="15">
         <columnConstraints>
             <ColumnConstraints prefWidth="200" />
@@ -13,20 +13,20 @@
         </columnConstraints>
         <children>
             <VBox spacing="3" GridPane.columnIndex="0" GridPane.rowIndex="0">
-                <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Nome" />
-                <TextField prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
+                <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Nome Completo" />
+                <TextField fx:id="fieldNome" prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
             </VBox>
             <VBox spacing="3" GridPane.columnIndex="1" GridPane.rowIndex="0">
                 <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Parentesco" />
-                <TextField prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
+                <TextField fx:id="fieldParentesco" prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
             </VBox>
             <VBox spacing="3" GridPane.columnIndex="0" GridPane.rowIndex="1">
                 <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="RG" />
-                <TextField prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
+                <TextField fx:id="fieldRg" prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
             </VBox>
             <VBox spacing="3" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Telefone" />
-                <TextField prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
+                <Label style="-fx-text-fill: #0f766e; -fx-font-size: 12;" text="Telefone/Celular" />
+                <TextField fx:id="fieldTelefone" prefHeight="35.0" style="-fx-background-color: white; -fx-border-color: #c8e1e6; -fx-border-radius: 5;" />
             </VBox>
         </children>
         <rowConstraints>
@@ -34,9 +34,9 @@
             <RowConstraints />
         </rowConstraints>
     </GridPane>
-    
+
     <HBox alignment="CENTER_RIGHT" spacing="10" style="-fx-padding: 20 0 0 0;">
-        <Button fx:id="btnSalvarAutorizada" style="-fx-background-color: #0f766e; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Salvar" />
-        <Button fx:id="btnCancelarAutorizada" style="-fx-background-color: #b02e50; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Cancelar" />
+        <Button onAction="#salvarPessoaAutorizada" style="-fx-background-color: #0f766e; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Salvar" />
+        <Button onAction="#cancelarPessoaAutorizada" style="-fx-background-color: #b02e50; -fx-text-fill: white; -fx-background-radius: 5; -fx-pref-width: 100;" text="Cancelar" />
     </HBox>
 </VBox>
